@@ -1,3 +1,8 @@
+2007-06-10 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
+
+	* src/mcs51/peeph.def: disabled rule 132.d to fix #1734654
+	* support/regression/tests/bug1734654.c: added
+
 2007-06-10 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCast.c (decorateType): optimized '?' for equal operands
